# mevita

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: 99-usb-can.rules  mid360_fastlio_config.yaml
launch/: display.launch  fast_lio.launch  livox.launch  msg_MID360.launch
models/: mevita_dae.urdf  mevita_long_dae.urdf  mevita_long_stl.urdf  mevita_stl.urdf  policy.pt  scene.xml
models/meshes/: L_calf_link.3dxml  L_calf_link.STL  L_calf_link.dae  L_foot_link.3dxml  L_foot_link.STL  L_foot_link.dae  L_foot_long_link.3dxml  L_foot_long_link.STL  L_foot_long_link.dae  L_hip1_link.3dxml  L_hip1_link.dae  L_hip2_link.3dxml  L_hip2_link.STL  L_hip2_link.dae  L_thigh_link.3dxml  L_thigh_link.STL  L_thigh_link.dae  R_calf_link.3dxml  R_calf_link.STL  R_calf_link.dae  R_foot_link.3dxml  R_foot_link.STL  R_foot_link.dae  R_foot_long_link.3dxml  R_foot_long_link.STL  R_foot_long_link.dae  R_hip1_link.3dxml  R_hip1_link.STL  R_hip1_link.dae  R_hip2_link.3dxml  R_hip2_link.STL  R_hip2_link.dae  R_thigh_link.3dxml  R_thigh_link.STL  R_thigh_link.dae  base_link.3dxml  base_link.STL  mevita_long_mujoco.urdf  mevita_long_mujoco.xml  mevita_mujoco.urdf  (+1 more)
msg/: MevitaLog.msg
scripts/: mevita_main.py  mevita_utils.py  parameters.py  tmotor_lib.py  tmotor_test.py
