<package format="2">
  <name>mevita</name>
  <version>1.0.0</version>
  <description>
    <p>MEVITA PACKAGE</p>
  </description>
  <author>Kento Kawaharazuka</author>
  <maintainer email="kawaharazuka@jsk.imi.i.u-tokyo.ac.jp" />
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
